Fix invisible dropdown options on Windows by styling option elements globally

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+option {
+  background: #1A1826;
+  color: #F0F6FC;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
